--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,11 @@
             android:name="com.moti.tellatale.LoginActivity"
             android:label="@string/title_activity_login" >
         </activity>
+        <activity android:name="com.facebook.LoginActivity" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
     </application>
 
 </manifest>
